--- a/PP_3_1_2_Boot_Security-master/src/main/resources/application.properties
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/arr2d2?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ar12?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Polpa12siM
 spring.jpa.properties.hibernate.show_sql=true
